[gd_scene load_steps=18 format=2]

[ext_resource path="res://Script/Menus/Pause.gd" type="Script" id=1]
[ext_resource path="res://Sprites/KeyIcons/gdb-xbox-1a.png" type="Texture" id=2]
[ext_resource path="res://Sprites/KeyIcons/gdb-keyboard-1a.png" type="Texture" id=3]


[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFontData" id=2]
antialiased = false
font_path = "res://Font/PixelOperator.ttf"

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = SubResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Font/PixelOperator.ttf"

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = SubResource( 5 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 132, 52, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 450, 50, 12, 12 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 450, 34, 12, 12 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 450, 82, 12, 12 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 304, 306, 48, 30 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 80, 306, 16, 14 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 96, 306, 16, 14 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 64, 306, 16, 14 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.513726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -206.0
margin_right = 147.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 180.0
margin_bottom = 206.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 180.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 19 )
focus_neighbour_bottom = NodePath("../Restart")
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Resume"
flat = true
align = 0

[node name="Restart" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 180.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( 0, 19 )
focus_neighbour_top = NodePath("../Resume")
focus_neighbour_bottom = NodePath("../Exit")
custom_styles/focus = SubResource( 1 )
custom_fonts/font = SubResource( 3 )
text = "Restart Level"
flat = true
align = 0

[node name="Exit" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 180.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 19 )
focus_neighbour_top = NodePath("../Restart")
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "Exit"
flat = true
align = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 184.0
margin_right = 419.0
margin_bottom = 206.0
custom_constants/margin_right = 235

[node name="JoypadController" type="VBoxContainer" parent="HBoxContainer"]
visible = false
margin_left = 423.0
margin_right = 603.0
margin_bottom = 206.0
custom_constants/separation = 15

[node name="GameCommands" type="Label" parent="HBoxContainer/JoypadController"]
margin_right = 180.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 6 )
text = "GAMECOMMANDS"
align = 1

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/JoypadController"]
margin_top = 47.0
margin_right = 180.0
margin_bottom = 187.0
columns = 2

[node name="Move" type="Label" parent="HBoxContainer/JoypadController/GridContainer"]
margin_right = 125.0
margin_bottom = 32.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = SubResource( 6 )
text = "Move"

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/JoypadController/GridContainer"]
margin_left = 129.0
margin_right = 153.0
margin_bottom = 32.0
texture = SubResource( 7 )
stretch_mode = 4

[node name="Jump" type="Label" parent="HBoxContainer/JoypadController/GridContainer"]
margin_top = 36.0
margin_right = 125.0
margin_bottom = 68.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = SubResource( 6 )
text = "Jump"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/JoypadController/GridContainer"]
margin_left = 129.0
margin_top = 36.0
margin_right = 153.0
margin_bottom = 68.0
texture = SubResource( 8 )
expand = true
stretch_mode = 6

[node name="Attack" type="Label" parent="HBoxContainer/JoypadController/GridContainer"]
margin_top = 72.0
margin_right = 125.0
margin_bottom = 104.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = SubResource( 6 )
text = "Attack"

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/JoypadController/GridContainer"]
margin_left = 129.0
margin_top = 72.0
margin_right = 153.0
margin_bottom = 104.0
texture = SubResource( 9 )
expand = true
stretch_mode = 6

[node name="Special" type="Label" parent="HBoxContainer/JoypadController/GridContainer"]
margin_top = 108.0
margin_right = 125.0
margin_bottom = 140.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = SubResource( 6 )
text = "Special"

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer/JoypadController/GridContainer"]
margin_left = 129.0
margin_top = 108.0
margin_right = 153.0
margin_bottom = 140.0
texture = SubResource( 10 )
expand = true
stretch_mode = 6

[node name="KeyBoardController" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 423.0
margin_right = 603.0
margin_bottom = 206.0
custom_constants/separation = 15

[node name="GameCommands" type="Label" parent="HBoxContainer/KeyBoardController"]
margin_right = 180.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 6 )
text = "GAMECOMMANDS"
align = 1

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/KeyBoardController"]
margin_top = 47.0
margin_right = 180.0
margin_bottom = 187.0
columns = 2

[node name="Move" type="Label" parent="HBoxContainer/KeyBoardController/GridContainer"]
margin_right = 125.0
margin_bottom = 32.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = SubResource( 6 )
text = "Move"

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/KeyBoardController/GridContainer"]
margin_left = 129.0
margin_right = 177.0
margin_bottom = 32.0
texture = SubResource( 11 )
stretch_mode = 3

[node name="Jump" type="Label" parent="HBoxContainer/KeyBoardController/GridContainer"]
margin_top = 36.0
margin_right = 125.0
margin_bottom = 68.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = SubResource( 6 )
text = "Jump"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/KeyBoardController/GridContainer"]
margin_left = 129.0
margin_top = 36.0
margin_right = 177.0
margin_bottom = 68.0
texture = SubResource( 12 )
expand = true
stretch_mode = 6

[node name="Attack" type="Label" parent="HBoxContainer/KeyBoardController/GridContainer"]
margin_top = 72.0
margin_right = 125.0
margin_bottom = 104.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = SubResource( 6 )
text = "Attack"

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/KeyBoardController/GridContainer"]
margin_left = 129.0
margin_top = 72.0
margin_right = 177.0
margin_bottom = 104.0
texture = SubResource( 13 )
stretch_mode = 6

[node name="Special" type="Label" parent="HBoxContainer/KeyBoardController/GridContainer"]
margin_top = 108.0
margin_right = 125.0
margin_bottom = 140.0
rect_min_size = Vector2( 125, 0 )
custom_fonts/font = SubResource( 6 )
text = "Special"

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer/KeyBoardController/GridContainer"]
margin_left = 129.0
margin_top = 108.0
margin_right = 177.0
margin_bottom = 140.0
texture = SubResource( 14 )
stretch_mode = 6

[node name="Tween" type="Tween" parent="."]

[node name="FloodTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
